# karma

./: .gitignore  Cargo.toml  README.md  run.sh
WikiTest/: Germany.txt
docs/: Crawling.md  FutureWork.md  PromptingMethodology.md  Relevance.md  SupportedModels.md
docs/rust/: .rustc_info.json
docs/rust/doc/: crates.js  help.html  search-index.js  settings.html  src-files.js
docs/rust/doc/Implementation/: all.html  fn.generate_prompt.html  fn.get_wikidata_id.html  fn.main.html  fn.parse_triples_from_output.html  fn.print_statistics.html  fn.process_triples.html  fn.search_entity.html  index.html  sidebar-items.js  struct.GenTriple.html
docs/rust/doc/dyn_clone/: all.html  fn.arc_make_mut.html  fn.clone.html  fn.clone_box.html  fn.rc_make_mut.html  index.html  macro.clone_trait_object.html  trait.DynClone.html
docs/rust/doc/futures_util/: all.html  index.html
docs/rust/doc/h2/: all.html  index.html  struct.Error.html  struct.FlowControl.html  struct.Ping.html  struct.PingPong.html  struct.Pong.html  struct.Reason.html  struct.RecvStream.html  struct.SendStream.html  struct.StreamId.html
docs/rust/doc/hyper/: all.html  index.html  struct.Error.html
docs/rust/doc/hyper_tls/: all.html  enum.MaybeHttpsStream.html  index.html  struct.HttpsConnecting.html  struct.HttpsConnector.html  struct.TlsStream.html
docs/rust/doc/hyper_util/: all.html  (+1 more)
output/: AlbertEinstein.txt  MonsterEnergy.txt  Wright State University.txt  WrightStateUniversity.txt
scripts/: gen-docs.sh  test-kg-gen.sh
src/: llm.rs  main.rs  types.rs  wikidata.rs
visualization/src/: vis.py
(+3117 files in other folders)
