[package]
name = "Implementation"
version = "0.1.0"
edition = "2024"

[dependencies]
lazy_static = "1.5.0"
ollama-rs = "0.2.6"
tokio = { version = "1.44.1", features = ["full"] }
reqwest = { version = "0.12.15", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-xml-rs = "0.6.0"
rand = "0.9.1"
regex = "1.11.1"
